@@ -74,7 +74,7 @@
 		<!--Configuration: test -->
 
 		<!--artifacts needed for testing -->
-		<dependency org="junit" name="junit" rev="4.11" conf="*->default" />
+		<dependency org="junit" name="junit" rev="4.11" conf="test->default" />
 
 		<dependency org="org.apache.hadoop" name="hadoop-test" rev="1.2.0"
 			conf="test->default" />
