@@ -128,9 +128,9 @@
     <ant dir="indexer-elastic" target="clean"/>
     <ant dir="indexer-solr" target="clean"/>
     <ant dir="language-identifier" target="clean"/>
-    <ant dir="lib-commons-httpclient" target="clean"/>
+    <!-- <ant dir="lib-commons-httpclient" target="clean"/> -->
     <ant dir="lib-http" target="clean"/>
-    <ant dir="lib-lucene-analyzers" target="clean"/>
+    <!-- <ant dir="lib-lucene-analyzers" target="clean"/>-->
     <ant dir="lib-nekohtml" target="clean"/>
     <ant dir="lib-regex-filter" target="clean"/>
     <ant dir="lib-xml" target="clean"/>
